# pjvpin

./: .env.example  .gitattributes  .gitignore  .opencodeignore  AGENTS.md  DESIGN.md  PLAN_LOGIN_CATALOGOS_WCAG.md  PLAN_REFACTOR_CONFIGURACION.md  README.md  eslint.config.js  index.html  opencode.json  package-lock.json  package.json  vite.config.ts
src/: App.css  (+2 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
src-tauri/src/catalogos/: commands.rs  dto.rs  dto_tests.rs  handlers.rs  models.rs  repository.rs  service.rs
src-tauri/src/docentes/: commands.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  tests.rs
src-tauri/src/eventos/: commands.rs  dto.rs  handlers.rs  models.rs  repository.rs  service.rs
src-tauri/src/grados/: commands.rs  dto.rs  dto_tests.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/grupos/: commands.rs  dto.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs
src-tauri/src/investigadores/: commands.rs  dto.rs  handlers.rs  mod.rs  models.rs  repository.rs  service.rs  tests.rs
src-tauri/src/personas/: commands.rs  dto.rs  handlers.rs  mod.rs  models.rs  repository.rs
src-tauri/src/proyectos/: commands.rs  dto.rs  handlers.rs  mod.rs  models.rs  repository.rs  repository_export.rs  repository_queries.rs  repository_stats.rs  service.rs
src-tauri/src/publicaciones/: commands.rs  dto.rs  handlers.rs  models.rs  repository.rs  service.rs
src-tauri/src/recursos/: commands.rs  dto.rs  handlers.rs  macros.rs  mod.rs  models.rs  repository.rs  service.rs
(+261 files in other folders)
